# Toxilens-

./: .env.example  .gitignore  4.37.0  DEMO_OUTPUT.md  DOCUMENTATION.md  FinalPlan.txt  LICENSE  README.md  ToxiLens_Documentation.docx  demo.py  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
.kiro/specs/toxilens-platform/: .config.kiro  design.md  requirements.md  tasks.md
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py
backend/app/explainability/: __init__.py
backend/app/features/: __init__.py
backend/app/models/: __init__.py  descriptor_model.py  ensemble_model.py  gnn_model.py  risk_scorer.py  transformer_model.py
backend/app/preprocessing/: __init__.py  descriptors.py  fingerprints.py  graph_builder.py  pipeline.py  rdkit_utils.py
backend/app/schemas/: prediction.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: DOCUMENTATION_INDEX.md  architecture_diagrams.md  model_card.md
examples/: README.md  api_usage_examples.ipynb  batch_screening_example.csv  example_molecules.json
frontend/: .gitkeep
ml/artifacts/: .gitkeep
ml/data/processed/: .gitkeep
ml/models/: .gitkeep  conformal.py  ensemble.py  gnn.py
ml/scripts/: .gitkeep  download_tox21.py  optimize_ensemble.py  preprocess_tox21.py  preprocess_tox21_standalone.py  train_chemberta.py  train_gnn.py  train_lgbm.py
tests/: test_descriptors.py  test_fingerprints.py  test_graph_builder.py  test_model_inference.py  test_model_utils.py  test_pipeline.py  test_rdkit_utils.py  test_risk_scorer.py
(+1 files in other folders)
